argocd/test-aws.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ecr-access
  namespace: inlaze
spec:
  containers:
  - name: cli-container
    image: amazonlinux:2
    command: ["/bin/sh", "-c", "sleep 3600"]
    tty: true
  restartPolicy: Never
